--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "@realm/react": "^0.6.2",
     "@reduxjs/toolkit": "^2.0.1",
     "expo": "~49.0.15",
     "expo-dev-client": "~2.4.12",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "install": "^0.13.0",
     "react": "18.2.0",
@@ -23,9 +23,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-redux": "^9.0.4",
-    "realm": "^12.4.0",
-    "redux": "^5.0.0",
-    "expo-splash-screen": "~0.20.5"
+    "redux": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
